[package]
name = "subseq_scheduling"
version = "0.1.0"
edition = "2021"
authors = ["Teague Lasser"]

[dependencies]
anyhow = "1.0.79"
rand = { version = "0.8.5", default-features = false, features=["std_rng"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
uuid = { version = "1.8.0", features = ["serde"] }
tracing = { version = "0.1.40", optional = true }
lazy_static = "1.5.0"

[features]
default = []
tracing = ["dep:tracing"]
